add new changes

--- a/mentor/templates/mentor/exam_list.html
+++ b/mentor/templates/mentor/exam_list.html
@@ -27,9 +27,9 @@
                 {% for item in exams %}
               <li
                 class="list-group-item d-flex justify-content-between align-items-center border-start-0 border-top-0 border-end-0 border-bottom rounded-0 mb-2">
-                <div class="d-flex align-items-center">
-                  <a href="{% url 'm_edit_exam' item.id %}">{{ item.name }}</a>
-                </div>
+{#                <div class="d-flex align-items-center">#}
+{#                  <a href="{% url 'm_edit_exam' item.id %}">{{ item.name }}</a>#}
+{#                </div>#}
 {#                <a href="#!" data-mdb-toggle="tooltip" title="Remove item">#}
 {#                  <i class="fas fa-times text-primary"></i>#}
 {#                </a>#}
